--- a/app/prj.conf
+++ b/app/prj.conf
@@ -1,24 +1,38 @@
-CONFIG_BOOTLOADER_MCUBOOT=y
-CONFIG_MCUBOOT_IMG_MANAGER=y
-CONFIG_MCUBOOT_GENERATE_CONFIRMED_IMAGE=n
-
-CONFIG_FLASH=y
-CONFIG_FLASH_MAP=y
-CONFIG_STREAM_FLASH=y
-
-CONFIG_CONSOLE=y
+# Console / UART
 CONFIG_SERIAL=y
+CONFIG_CONSOLE=y
 CONFIG_UART_CONSOLE=y
-CONFIG_LOG=y
-CONFIG_LOG_DEFAULT_LEVEL=3
-CONFIG_LOG_RUNTIME_FILTERING=y
-CONFIG_LOG_MODE_DEFERRED=y
+CONFIG_LOG_BACKEND_UART=y
 
-CONFIG_SHELL=y
-CONFIG_SHELL_BACKEND_SERIAL=y
-CONFIG_SHELL_LOG_BACKEND=y
-CONFIG_LOG_CMDS=y
-CONFIG_SHELL_LOG_LEVEL_INF=y
+# Shell
+CONFIG_SHELL=n
+#CONFIG_SHELL_BACKEND_SERIAL=n
+#CONFIG_SHELL_STACK_SIZE=3072
 
-CONFIG_PRINTK=y
+# Logging
+CONFIG_LOG=n
+#CONFIG_LOG_MODE_DEFERRED=n
+#CONFIG_LOG_MODE_IMMEDIATE=y
+#CONFIG_LOG_MODE_OVERFLOW=y
+#CONFIG_LOG_BUFFER_SIZE=16384
+#CONFIG_LOG_DEFAULT_LEVEL=3
+#CONFIG_LOG_PRINTK=n
+#CONFIG_LOG_RUNTIME_FILTERING=y
+#CONFIG_LOG_BACKEND_SHOW_COLOR=n
+#CONFIG_SHELL_VT100_COLORS=n
+
+
+# Backends: only shell
+#CONFIG_SHELL_LOG_BACKEND=y
+#CONFIG_LOG_BACKEND_UART=n
+#CONFIG_LOG_BACKEND_RTT=n
+#CONFIG_LOG_BACKEND_SWO=n
+
+CONFIG_MAIN_STACK_SIZE=8192
+CONFIG_ISR_STACK_SIZE=4096
+CONFIG_IDLE_STACK_SIZE=1024
+
+
+CONFIG_LORA=y
+CONFIG_LORA_SX127X=y
 
