--- a/docker/Dockerfile.dev
+++ b/docker/Dockerfile.dev
@@ -20,6 +20,8 @@ SHELL ["/bin/bash","-euo","pipefail","-c"]
 #----------------------------------------------------
 RUN apt-get update && \
     apt-get install --no-install-recommends -y \
+    less \
+    ripgrep \
     adduser \
     neovim \
     tmux  \
@@ -41,8 +43,8 @@ RUN echo '%sudo ALL=(ALL) NOPASSWD:ALL' >> /etc/sudoers  && \
 #----------------------------------------------------
 # Setup JLink
 #----------------------------------------------------
-COPY setup_jlink.sh /tmp/
-RUN /tmp/setup_jlink.sh && rm -f /tmp/setup_jlink.sh
+#COPY setup_jlink.sh /tmp/
+#RUN /tmp/setup_jlink.sh && rm -f /tmp/setup_jlink.sh
 
 
 USER ${USER_NAME}
